(library
 (name kaleidoscope_lib)
 (libraries
  ;async
  ctypes.foreign
  llvm
  llvm.analysis
  llvm.executionengine
  llvm.target
  llvm.scalar_opts
  llvm.all_backends
  stdio
  menhirLib)
 (preprocess
  (pps ppx_jane ppx_expect ppx_let))
 (inline_tests))

(ocamllex lexer)

(menhir
 (flags --external-tokens Ast --explain --table)
 (modules parser))
